<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_permision_name">Security broadcast</string>
    <string name="app_permision_info">Permission send receive data broadcast in application</string>
    <string name="app_name">Invoice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_confirm_exit_app">Are you sure you want to exit the Job Aid?</string>
    <string name="text_button_ok">YES</string>
    <string name="text_button_no">NO</string>
    <string name="text_lable_contacter">Ansprechpartner:</string> <!-- contacter -->
    <string name="text_lable_sex">Geschlecht:</string> <!-- sex -->
    <string name="text_lable_company">Firma:</string> <!-- company -->
    <string name="text_lable_address">Adresse:</string> <!-- address -->
    <string name="text_lable_plz">PLZ:</string> <!-- alz -->
    <string name="text_lable_stadt">Stadt:</string> <!-- stadt -->
    <string name="text_lable_project">Projekt:</string> <!-- stadt -->
    <string name="text_lable_order_on">Bestellt am:</string> <!-- project -->
    <string name="text_lable_delivery">Lieferdatum:</string> <!-- lieferdatum -->
    <string name="text_lable_customer_info">Kunden-Nr:</string> <!-- lieferdatum -->
    <string name="text_lable_invoice_number">Rechnungsnummer:</string> <!-- lieferdatum -->
    <string name="text_lable_male">Herr</string> <!-- Male -->
    <string name="text_lable_female">Frau</string> <!-- Female -->
    <string name="text_lable_vorname">Vorname: </string> <!-- Female -->
    <string name="text_lable_nachname">Nachname: </string> <!-- Female -->
    <string name="text_lb_header_tb_Pos">Pos</string> <!-- Female -->
    <string name="text_lb_header_tb_bezeichnung">Bezeichnung</string> <!-- Female -->
    <string name="text_lb_header_tb_art_nr">Art-Nr.</string> <!-- Female -->
    <string name="text_lb_header_tb_menge">Menge</string> <!-- Female -->
    <string name="text_lb_header_tb_einze">Einzelpreis</string> <!-- Female -->
    <string name="text_lb_header_tb_gesamt">Gesamt</string> <!-- Female -->

    <string name="TEXT_CHOOSE_FROM_PHONE">Choose image from your phone</string>
    <string name="TEXT_TAKE_NEW_PHOTO">Take new image</string>
    <string name="TEXT_CHOOSE_ALBUM_TO_SAVE">Choose image for product</string>
    <string name="IMG_MAX_SIZE">Image size must not exceed</string>
    <string name="IMG_INVALID_FORMAT">Upload incorrect image format (*. Bmp, *. Gif, *. Jpg, *. Jpeg, *. Png)</string>
    <string name="ERROR_OUT_MEMORY">Your phone is not enough memory to perform this feature. Please try again later!</string>
    <string name="TEXT1">Kontrollieren Sie die Lieferung auf Vollständigkeit und Beschädigungen. \nSollten Sie Grund zur Beanstandung haben, setzen Sie sich bitte umgehend mit uns in Verbindung. \nReklamationen können nur am Tag der Lieferung angenommen werden.</string>
    <string name="TEXT2">Sehr geehrte Damen und Herren, \n\nwir danken für Ihre Anfrage und unterbreiten nachstehendes Angebot.</string>
    <string name="TEXT3">Wir hoffen, dass Ihnen unser Angebot zusagt und würden uns über Ihren Auftrag sehr freuen. \n\nMit freundlichen Grüssen. \nIngolf Starke</string>
    <string name="TEXT4">Die Ware bleibt bis zur vollständigen Bezahlung unser Eigentum. \n \nIch habe die Ware im ordnungsgemäßen Zustand erhalten.</string>
    <string name="LOADING">loading ...</string>
    <string name="TEXT_USD_GERMAN">€</string>

</resources>