<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/llTopMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bar_bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/page_padding" >

        <Button
            android:id="@+id/btBack"
            style="@style/CustomButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="zurück"
            android:textColor="@color/BLACK" />

        <Button
            android:id="@+id/btCreate"
            style="@style/CustomButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:text="speichern"
            android:textColor="@color/BLACK" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/page_padding" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/TRANSPARENT"
                android:gravity="center_vertical"
                android:minHeight="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_lable_company" />

                <EditText
                    android:id="@+id/etContactName"
                    style="@style/CustomEditText"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="none"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/TRANSPARENT"
                android:gravity="center_vertical"
                android:minHeight="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_lable_address" />

                <EditText
                    android:id="@+id/etAddress"
                    style="@style/CustomEditText"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="none"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/TRANSPARENT"
                android:gravity="center_vertical"
                android:minHeight="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_lable_plz" />

                <EditText
                    android:id="@+id/etPLZ"
                    style="@style/CustomEditText"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="none"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/TRANSPARENT"
                android:gravity="center_vertical"
                android:minHeight="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_lable_stadt" />

                <EditText
                    android:id="@+id/etStadt"
                    style="@style/CustomEditText"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="none"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/TRANSPARENT"
                android:gravity="center_vertical"
                android:minHeight="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_lable_vorname" />

                <EditText
                    android:id="@+id/etVorname"
                    style="@style/CustomEditText"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="none"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/TRANSPARENT"
                android:gravity="center_vertical"
                android:minHeight="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_lable_nachname" />

                <EditText
                    android:id="@+id/etNachname"
                    style="@style/CustomEditText"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="none"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/TRANSPARENT"
                android:gravity="center_vertical"
                android:minHeight="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_lable_sex" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_lable_male" />

                    <RadioButton
                        android:id="@+id/rbFeMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_lable_female" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>