<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/WHITE"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvContent1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="false"
                android:text="Firma" />

            <TextView
                android:id="@+id/tvContent2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="false"
                android:text="Angebot"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContent3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="false" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="left"
            android:singleLine="false"
            android:text="@string/TEXT2" />

        <LinearLayout
            android:id="@+id/tblListOrderNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:background="@color/BLACK"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/BLACK"
                android:gravity="center"
                android:minHeight="@dimen/min_height_table_row" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginLeft="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_Pos"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_menge"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_bezeichnung"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_einze"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_gesamt"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvContent4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

        <TextView
            android:id="@+id/tvContent5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/TEXT3" />
    </LinearLayout>

</ScrollView>