<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/WHITE"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dip" >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvContent1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="false"
                android:text="Firma" />

            <TextView
                android:id="@+id/tvContent2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="false"
                android:text="Lieferschein"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContent3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="false" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/TEXT1"
            android:singleLine="false" />

        <LinearLayout
            android:id="@+id/tblListOrderNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:background="@color/BLACK"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/BLACK"
                android:gravity="center"
                android:minHeight="@dimen/min_height_table_row" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginLeft="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_Pos"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_menge"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_art_nr"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_weight="1"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:padding="@dimen/page_padding"
                    android:text="@string/text_lb_header_tb_bezeichnung"
                    android:textColor="@color/BLACK"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:gravity="left"
            android:text="Die Ware bleibt bis zur vollständigen Bezahlung unser Eigentum. \n \n Ich habe die Ware im ordnungsgemäßen Zustand erhalten." />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_banner_shadow_1" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Ort, Datum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_banner_shadow_1" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Unterschrift" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>